<resources>
  <string name="app_name">MCS</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="attendance">Attendance</string>
  <string name="action_bar_search">search</string>
  <string name="action_bar_about">about</string>
  <string name="action_bar_feedback">feedback</string>
  <string name="action_bar_add">addconference</string>
  <string name="action_bar_sign">sign</string>


  <string name="dialog_theme_content">Theme</string>
  <string name="dialog_theme_description">Description</string>
  <string name="dialog_place_content">Place</string>
  <string name="conference_attendence"><![CDATA[Conference&Attendence]]></string>
  <string name="file_manager">FileManager</string>
  <string name="contact_exchange">ContactExchange</string>
  <string name="dialog_place_title">Place</string>
  <string name="dialog_theme_title">Theme  Description</string>
  <string name="dialog_time_title">Time</string>
  <string name="dialog_open_title">Open</string>
  <string name="open_low">Low</string>
  <string name="open_middle">Middle</string>
  <string name="open_hight">Hight</string>
  <string name="dialog_max_parter_title">MaxParter</string>
  <string name="conference_theme_description">Theme Description</string>
  <string name="conference_place">Place  </string>
  <string name="conference_open">Open</string>
  <string name="conference_max_parter">Max Parter</string>
  <string name="conference_special_men">Special Parter</string>
  <string name="conference_create_title">CreateConference</string>
  <string name="conference_theme">Theme</string>
  <string name="conference_time_start">Time_Start:</string>
  <string name="conference_time_end">Time_End:</string>
  <string name="conference_description">Description  </string>
  <string name="conference_item_btn_mark">Mark</string>
  <string name="conference_item_btn_men_signed">MenSigned</string>
  <string name="conference_item_mark_title">Mark</string>
  <string name="sign_qrcode">QrCodeSign</string>
  <string name="sign_serial">SerialSign</string>
  <string name="nav_header_unlogin">click the avatar to login</string>
  <string name="double_click_exit">double click to exit</string>
  <string name="login_title">Login</string>
  <string name="login_hint_username">Phone</string>
  <string name="login_hint_password">Password</string>
  <string name="login_btn_regist">Regist</string>
  <string name="login_btn_login">Login</string>
  <string name="login_regist_1_title">RegistAccount</string>
  <string name="login_regist_2_title">VerifyCode</string>
  <string name="login_regist_3_title">Setting</string>
  <string name="regist_hint_input_phone">please input your phone</string>
  <string name="regist_btn_get_verifycode">GetVerifyCode</string>
  <string name="regist_remind_01">Please finish registing whithin five minutes</string>
  <string name="regist_remind_02">Enter Verifycode</string>
  <string name="regist_remind_resend_message">Resend Message</string>
  <string name="regist_next_step">Next Step</string>
  <string name="regist_3_pre_password">Password</string>
  <string name="regist_hint_enter_password">Enter Password</string>
  <string name="regist_3_pre_ensure_password">Ensure Pass</string>
  <string name="regist_hint_ensure_password">Ensure Password</string>
  <string name="regist_3_pre_nickname">Nickname</string>
  <string name="regist_hint_enter_nickname">Enter Nickname</string>
  <string name="regist_finish">Finish</string>
  <string name="unlogin_remind">PleaseLoginOrRegistForBetterExperience</string>
  <string name="regist_remind_verifycode_error">VerifycodeError</string>
  <string name="person_info_avatar">Avatar</string>
  <string name="person_info_logout">Logout</string>
  <string name="person_info_birthday">Birthday</string>
  <string name="person_info_sax">Sax</string>
  <string name="person_info_nickname">Nickname</string>
  <string name="person_info_job">Job</string>
  <string name="person_info_workplace">WorkPlace</string>
  <string name="person_info_realname">RealName</string>
  <string name="person_info_title">PersonInfo</string>
  <string name="men_signed_title">MenSigned</string>
  <string name="men_signed_plan">Plan</string>
  <string name="message_dialog_cancle">cancle</string>
  <string name="message_dialog_yes">Yes</string>
  <string name="message_dialog_title_failure">SignFailure</string>
  <string name="message_dialog_title_success">SignSuccess</string>
  <string name="attendance_item_btn_personal_plan">Plan</string>
  <string name="attendance_item_btn_men_signed">MenSigned</string>
</resources>
