<?xml version="1.0" encoding="utf-8"?>
<graduation.mcs.ui.view.Regist3View xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_space"
        android:layout_marginRight="@dimen/large_space"
        android:layout_marginTop="@dimen/big_large_space"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Widget.EditText"
            android:padding="@dimen/text_textview_to_edittext"
            android:text="@string/regist_3_pre_password"
            />

        <EditText
            android:id="@+id/regist_3_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_edittext_pre_space"
            android:textAppearance="@android:style/TextAppearance.Widget.EditText"
            android:hint="@string/regist_hint_enter_password"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_space"
        android:layout_marginRight="@dimen/large_space"
        android:layout_marginTop="@dimen/medium_space"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Widget.EditText"
            android:padding="@dimen/text_textview_to_edittext"
            android:text="@string/regist_3_pre_ensure_password"
            />

        <EditText
            android:id="@+id/regist_3_ensure_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_edittext_pre_space"
            android:textAppearance="@android:style/TextAppearance.Widget.EditText"
            android:hint="@string/regist_hint_ensure_password"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_space"
        android:layout_marginRight="@dimen/large_space"
        android:layout_marginTop="@dimen/medium_space"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Widget.EditText"
            android:padding="@dimen/text_textview_to_edittext"
            android:text="@string/regist_3_pre_nickname"
            />

        <EditText
            android:id="@+id/regist_3_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Widget.EditText"
            android:paddingLeft="@dimen/text_edittext_pre_space"
            android:hint="@string/regist_hint_enter_nickname"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/regist_3_finish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_big"
        android:layout_marginLeft="@dimen/large_space"
        android:layout_marginRight="@dimen/large_space"
        android:layout_marginTop="@dimen/medium_space"
        android:background="@drawable/selector_btn"
        android:textAppearance="@android:style/TextAppearance.Inverse"
        android:text="@string/regist_finish"
        />

</graduation.mcs.ui.view.Regist3View>