<?xml version="1.0" encoding="utf-8"?>
<graduation.mcs.ui.view.LoginView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <EditText
      android:id="@+id/login_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/large_space"
      android:layout_marginRight="@dimen/large_space"
      android:layout_marginTop="@dimen/large_space"
      android:padding="@dimen/medium_space"
      android:drawableLeft="@mipmap/ic_login_username_default"
      android:drawablePadding="@dimen/large_space"
      android:hint="@string/login_hint_username"
      />
  <EditText
      android:id="@+id/login_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/large_space"
      android:layout_marginRight="@dimen/large_space"
      android:padding="@dimen/medium_space"
      android:drawableLeft="@mipmap/ic_login_password_default"
      android:drawablePadding="@dimen/large_space"
      android:hint="@string/login_hint_password"
      />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="@dimen/medium_space"
      android:layout_marginLeft="@dimen/large_space"
      android:layout_marginRight="@dimen/large_space"
      >
    <Button
        android:id="@+id/login_btn_regist"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_medium"
        android:layout_weight="1"
        android:background="@drawable/selector_btn"
        android:layout_marginRight="@dimen/large_space"
        android:textAppearance="@android:style/TextAppearance.Inverse"
        android:text="@string/login_btn_regist"
        />
    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_medium"
        android:layout_weight="1"
        android:background="@drawable/selector_btn"
        android:text="@string/login_btn_login"
        android:textAppearance="@android:style/TextAppearance.Inverse"
        />

  </LinearLayout>

</graduation.mcs.ui.view.LoginView>