<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
  <android.support.v7.widget.CardView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:cardElevation="5dp"
      app:cardMaxElevation="5dp"
      android:layout_marginTop="@dimen/small_space"
      android:layout_marginBottom="@dimen/big_small_space"
      android:layout_marginLeft="@dimen/large_space"
      android:layout_marginRight="@dimen/large_space"
      >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/small_space"
        >
      <RelativeLayout
          android:id="@+id/rl01"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <ImageView
            android:id="@+id/conf_item_avatar"
            android:layout_width="@dimen/conference_logo_width_item"
            android:layout_height="@dimen/conference_logo_height_item"
            android:layout_marginRight="@dimen/small_space"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_me_avatar_bg"
            />

        <TextView
            android:id="@+id/conf_item_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/conf_item_avatar"
            android:singleLine="true"
            android:text="@string/conference_theme"
            android:textAppearance="@android:style/TextAppearance"
            />


          <LinearLayout
              android:id="@+id/conf_item_time"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_alignBottom="@id/conf_item_avatar"
              android:layout_toRightOf="@id/conf_item_avatar"
              android:orientation="horizontal"
              >

              <TextView
                  android:id="@+id/conf_item_time_start"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="2016-01-01 12:00"
                  android:textSize="@dimen/micro_text"
                  />
              <TextView
                  android:id="@+id/conf_item_time_end"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="2016-01-01 12:00"
                  android:textSize="@dimen/micro_text"
                  />

          </LinearLayout>

          <TextView
              android:id="@+id/conf_item_place"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_above="@id/conf_item_time"
              android:layout_toRightOf="@id/conf_item_avatar"
              android:singleLine="true"
              android:text="@string/conference_place"
              android:textSize="@dimen/small_text"
              />

      </RelativeLayout>


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginBottom="@dimen/small_space"
          android:layout_marginTop="@dimen/big_small_space"
          >

        <Button
            android:id="@+id/conf_item_mark"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height_small"
            android:layout_marginLeft="@dimen/large_space"
            android:layout_marginRight="@dimen/large_space"
            android:layout_weight="1"
            android:background="@drawable/selector_btn"
            android:text="@string/conference_item_btn_mark"
            android:textAppearance="@android:style/TextAppearance.Inverse"
            android:elevation="@dimen/cardview_default_elevation"
            />

        <Button
            android:id="@+id/conf_item_men_signed"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height_small"
            android:layout_marginLeft="@dimen/large_space"
            android:layout_marginRight="@dimen/large_space"
            android:layout_weight="1"
            android:background="@drawable/selector_btn"
            android:textAppearance="@android:style/TextAppearance.Inverse"
            android:text="@string/conference_item_btn_men_signed"
            android:elevation="@dimen/cardview_default_elevation"
            />

      </LinearLayout>
    </LinearLayout>

  </android.support.v7.widget.CardView>
</LinearLayout>