<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    app:cardMaxElevation="3dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <RelativeLayout
            android:id="@+id/person_info_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_item"
            android:clickable="true"
            >

            <TextView
                android:id="@+id/tv_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="10dp"
                android:text="@string/person_info_nickname"
                />

            <TextView
                android:id="@+id/person_info_nickname_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/tv_02"
                android:background="#000"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/person_info_sax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_item"
            android:clickable="true"
            >

            <TextView
                android:id="@+id/tv_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="10dp"
                android:text="@string/person_info_sax"
                />

            <TextView
                android:id="@+id/person_info_sax_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/tv_03"
                android:background="#000"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/person_info_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_item"
            android:clickable="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/person_info_birthday"
                />

            <TextView
                android:id="@+id/person_info_birthday_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                />
        </RelativeLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>
